增加能够上传2007版之后的excel

--- a/WebRoot/home.html
+++ b/WebRoot/home.html
@@ -3,6 +3,7 @@
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>信息统计分析系统</title>
+<link rel="icon" href="images/favicon.ico">
 <link rel="stylesheet" type="text/css" href="css/home.css">
 <link rel="stylesheet" href="css/jquery.zySlide.css">
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -34,11 +35,17 @@ body {
 		</div>
 
 		<div class="head_search">
+			<div>
+			<div>
 			<form method="post" action="uploadfile"
 				enctype="multipart/form-data">
 				选择一个文件: <input type="file" name="uploadFile" />&nbsp;&nbsp;&nbsp;&nbsp;
 				<input type="submit" value="上传" />
 			</form>
+			</div>
+			<br/>
+			<div><a href='year_and_school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div>
+			</div>
 		</div>
 
 		<!-- 		
