--- a/WebRoot/year_and_school.html
+++ b/WebRoot/year_and_school.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<title>ังะฃบอฤ๊ทÝทึฮ๖</title>
+<meta charset="UTF-8">
+<link rel="icon" href="images/favicon.ico">
+<title>ๅญฆๆ กๅ’ๅนดไปฝๅๆ</title>
 <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 </head>
 
