--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -36,8 +36,16 @@
             <i class="em em-video_game"></i>
             <i class="em em-watermelon"></i>
         </p>
+        <br/>
+    <br/>
+    <br/>
+    <br/><br/>
+    <br/>
+    <a href="https://github.com/KANLON/joblabxDemo" >GitHub地址：https://github.com/KANLON/joblabxDemo </a>
+    
     </div>
     <div class="container-left"></div>
+    
 </header>
 <script src="scripts/jquery-3.1.1.min.js"></script>
 </body>
