修改存入数据库的bug和体检下载导入模板功能

--- a/WebRoot/home.html
+++ b/WebRoot/home.html
@@ -44,7 +44,8 @@ body {
 			</form>
 			</div>
 			<br/>
-			<div><a href='year_and_school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div>
+			<div><a href='year_and_school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div><br/>
+			<div><a href='testdata/热身赛数据集【模板】.xlsx'>点击这里下载导入模板</a></div>
 			</div>
 		</div>
 
