真实比赛项目小完成

--- a/WebRoot/year.html
+++ b/WebRoot/year.html
@@ -22,6 +22,7 @@
 				dataStrArr.forEach(function(data,index,arr){  
        				 dataIntArr.push(+data);  
     			});  
+				//绘制图形
 				drawing(json.data.yearList, dataIntArr);
 			});
 	
