--- a/WebRoot/home.html
+++ b/WebRoot/home.html
@@ -44,8 +44,8 @@ body {
 			</form>
 			</div>
 			<br/>
-			<div><a href='year_and_school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div><br/>
-			<div><a href='testdata/热身赛数据集【模板】.xlsx'>点击这里下载导入模板</a></div>
+			<div><a href='year_school_sex_top5school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div><br/>
+			<div><a href='testdata/JoblabX计算机能力联赛第三季决赛数据集100K【模板】.xlsx'>点击这里下载导入模板</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href='delete_all_data'>点击这里删除原来所有数据</a></div>
 			</div>
 		</div>
 
