增加展示元素数据和修改功能页面

--- a/WebRoot/home.html
+++ b/WebRoot/home.html
@@ -44,6 +44,15 @@ body {
 			</form>
 			</div>
 			<br/>
+			<div>
+			<form method="post" action="upload_school_file"
+				enctype="multipart/form-data">
+				请选择学校情况文件: <input type="file" name="uploadFile" />&nbsp;&nbsp;&nbsp;&nbsp;
+				<input type="submit" value="上传" />
+			</form>
+			</div>
+			
+			<br/>
 			<div><a href='year_school_sex_top5school.html'>点击这里查看各个学校和各入学年份分析情况 </a>  或者上传后也会直接跳转到分析情况页</div><br/>
 			<div><a href='testdata/JoblabX计算机能力联赛第三季决赛数据集100K【模板】.xlsx'>点击这里下载导入模板</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href='delete_all_data'>点击这里删除原来所有数据</a></div>
 			</div>
