--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -12,7 +12,7 @@
     <div class="container-right">
         <h1>Joblabx  热身题 项目  </h1>
         <p class="p1">主要功能是上传Excel文件，然后将Excel文件数据存储在数据库，然后对数据进行简单分析</p>
-        <a href="home.html"> <p class="p2"> 点击这里进行功能测试跳转</p> </a>
+        <a href="all_data.html"> <p class="p2"> 点击这里进行功能测试跳转</p> </a>
         <p class="p3">三明治队</p>
         <p>
             <i class="em em-octocat"></i>
@@ -39,7 +39,6 @@
         <br/>
     <br/>
     <br/>
-    <br/><br/>
     <br/>
     <a href="https://github.com/KANLON/joblabxDemo" >GitHub地址：https://github.com/KANLON/joblabxDemo </a>
     
